# ListOfLists-rs

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  index.template  list-of-lists.tf
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  build-and-deploy.yml  build-and-test.yml  ci.yml  claude-code-review.yml  claude.yml  dependabot-auto-merge.yml  deploy.yml  update-index-burgerlist.yaml  update-index-burgerlist.yml  update-index-movielist.yaml  update-index-movielist.yml  update-index-starlist.yml  update-index-template.yml
scripts/: new-site.sh
shared/: main.tf  outputs.tf
site/: main.tf
site-module/: main.tf
src/: common.rs  generator.rs  lambda.rs  lib.rs  main.rs  updater.rs
src/generator/: lambda.rs  main.rs
src/updater/: lambda.rs  main.rs
