[package]
name = "list_of_lists"
authors = ["Jacob Luszcz"]
default-run = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.*", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.*", features = ["behavior-version-latest"] }
aws_lambda_events = "0.16"
bytes = "1.10"
chrono = "0.4"
clap = { version = "4.5", features = ["env"] }
fern = "0.7"
html5minify = "0.3"
jluszcz_rust_utils = { git = "https://github.com//jluszcz/rust-utils" }
lambda_runtime = "0.14"
log = "0.4"
minijinja = "2.*"
regex = "1.11"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.*", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lambda"
path = "src/lambda.rs"
