[package]
name = "list_of_lists"
authors = ["Jacob Luszcz"]
default-run = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.*", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.*", features = ["behavior-version-latest"] }
aws_lambda_events = "1.0"
bytes = "1.*"
clap = { version = "4.5", features = ["env"] }
html5minify = "0.3"
jluszcz_rust_utils = { git = "https://github.com//jluszcz/rust-utils" }
lambda_runtime = "1.*"
log = "0.4"
minijinja = "2.*"
regex = "1.*"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.*", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lambda"
path = "src/lambda.rs"
