[package]
name = "list_of_lists"
authors = ["Jacob Luszcz"]
default-run = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudfront = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws_lambda_events = "1"
bytes = "1"
clap = { version = "4", features = ["env"] }
futures = "0"
minify-html = "0"
jluszcz_rust_utils = { git = "https://github.com//jluszcz/rust-utils" }
lambda_runtime = "1"
log = "0"
minijinja = { version = "2", features = ["json"] }
regex = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lambda"
path = "src/lambda.rs"
